cmake_minimum_required(VERSION 3.16)
project(LeetCodePractice)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_BUILD_TYPE "Debug")
file(GLOB_RECURSE SOURCE_FILE ./src/*.cpp)
#file(GLOB_RECURSE SOURCE_FILE src/*.cpp main.cpp)
include_directories(${CMAKE_SOURCE_DIR})
add_executable(${PROJECT_NAME} main.cpp ${SOURCE_FILE})
#add_executable(${PROJECT_NAME} main.cpp ./src/leet_code.cpp)
#add_executable(${PROJECT} ${SOURCE_FILE})
